force-app/main/default/objects/Campaign/fields/Accommodation_Costs__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Costs__c</fullName>
    <label>Accommodation Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>