force-app/main/default/objects/Campaign/fields/Booth_Space_Other__c.field-meta.xml
<CustomField>
    <fullName>Booth_Space_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide details if booth space is other</inlineHelpText>
    <label>Booth Space Other</label>
    <type>TextArea</type>
</CustomField>