force-app/main/default/objects/Campaign/fields/Brochure_Formal_Meeting_topic_Informatio__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Formal_Meeting_topic_Informatio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brochure/Formal Meeting/topic Info.</label>
    <type>Checkbox</type>
</CustomField>