force-app/main/default/objects/Campaign/fields/Campaign_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Member_Count__c</fullName>
    <description>Campaign Member Count on a Campaign</description>
    <label>Campaign Member Count</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>