force-app/main/default/objects/Campaign/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <formula>Name &amp; &quot;, &quot; &amp;  text(Single_Event_or_First_Meeting_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Name + Start Date</label>
    <type>Text</type>
</CustomField>