force-app/main/default/objects/Campaign/fields/Cancellation_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation Deadline</label>
    <type>Date</type>
</CustomField>