force-app/main/default/objects/Campaign/fields/Competitors_Attending_if_Other_is_chosen__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Attending_if_Other_is_chosen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Competitors Attending if Other is chosen</label>
    <length>120</length>
    <type>Text</type>
</CustomField>