force-app/main/default/objects/Campaign/fields/Compliance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check if the event has been approved by compliance.</inlineHelpText>
    <label>Compliance Approval</label>
    <type>Checkbox</type>
</CustomField>