force-app/main/default/objects/Campaign/fields/Compliance_Number__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please enter the number of the compliance approval document.</inlineHelpText>
    <label>Compliance Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>