force-app/main/default/objects/Campaign/fields/Contingent_East__c.field-meta.xml
<CustomField>
    <fullName>Contingent_East__c</fullName>
    <label>Contingent East</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>