force-app/main/default/objects/Campaign/fields/Contingent_HCPs__c.field-meta.xml
<CustomField>
    <fullName>Contingent_HCPs__c</fullName>
    <label>Contingent HCPs</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>