force-app/main/default/objects/Campaign/fields/Contingent_Staff__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Staff__c</fullName>
    <label>Contingent Staff</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>