force-app/main/default/objects/Campaign/fields/Contingent_Total__c.field-meta.xml
<CustomField>
    <fullName>Contingent_Total__c</fullName>
    <label>Contingent Total</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>