force-app/main/default/objects/Campaign/fields/Contingent_West__c.field-meta.xml
<CustomField>
    <fullName>Contingent_West__c</fullName>
    <label>Contingent West</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>