force-app/main/default/objects/Campaign/fields/Dates_Participating__c.field-meta.xml
<CustomField>
    <fullName>Dates_Participating__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Dates, If attending Multiple</label>
    <type>TextArea</type>
</CustomField>