force-app/main/default/objects/Campaign/fields/Describe_the_event__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_event__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Describe the event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>