force-app/main/default/objects/Campaign/fields/Event_City__c.field-meta.xml
<CustomField>
    <fullName>Event_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>