force-app/main/default/objects/Campaign/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <description>Event Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>