force-app/main/default/objects/Campaign/fields/Event_Country__c.field-meta.xml
<CustomField>
    <fullName>Event_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>