force-app/main/default/objects/Campaign/fields/Event_End__c.field-meta.xml
<CustomField>
    <fullName>Event_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event End</label>
    <type>DateTime</type>
</CustomField>