force-app/main/default/objects/Campaign/fields/Event_Exhibit_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Event_Exhibit_Contact_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event/Exhibit Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>