force-app/main/default/objects/Campaign/fields/Event_Exhibit_E_Mail_Address__c.field-meta.xml
<CustomField>
    <fullName>Event_Exhibit_E_Mail_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event/Exhibit Contact E-Mail Address</label>
    <type>Email</type>
</CustomField>