force-app/main/default/objects/Campaign/fields/Event_Exhibit_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Event_Exhibit_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event/Exhibit Contact Phone Number</label>
    <type>Phone</type>
</CustomField>