force-app/main/default/objects/Campaign/fields/Event_Exhibit_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Exhibit_Type__c</fullName>
    <label>Event/Exhibit Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Combined Virtual/Onsite Event</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Society</fullName>
            </value>
            <value>
                <fullName>Study Club</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Virtual Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>