force-app/main/default/objects/Campaign/fields/Event_Exhibit_Type_if_Other_is_chosen__c.field-meta.xml
<CustomField>
    <fullName>Event_Exhibit_Type_if_Other_is_chosen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event/Exhibit Type if Other is chosen</label>
    <length>120</length>
    <type>Text</type>
</CustomField>