force-app/main/default/objects/Campaign/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <description>Where did this event is going on</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>