force-app/main/default/objects/Campaign/fields/Event_Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Registration Link</label>
    <type>Url</type>
</CustomField>