force-app/main/default/objects/Campaign/fields/Event_Standkonzept__c.field-meta.xml
<CustomField>
    <fullName>Event_Standkonzept__c</fullName>
    <inlineHelpText>Geben Sie hier das Standkonzept ein.</inlineHelpText>
    <label>Standkonzept</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ZICH</fullName>
                <default>true</default>
                <label>ZICH</label>
            </value>
            <value>
                <fullName>MAC</fullName>
            </value>
            <value>
                <fullName>ZIAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>