force-app/main/default/objects/Campaign/fields/Event_Street__c.field-meta.xml
<CustomField>
    <fullName>Event_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event Street</label>
    <type>TextArea</type>
</CustomField>