force-app/main/default/objects/Campaign/fields/Exhibit_fee_amount_requested__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_fee_amount_requested__c</fullName>
    <label>Exhibit fee amount requested $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>