force-app/main/default/objects/Campaign/fields/Exhibit_Fee_Is_Not_Paid_To_An_Individual__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Fee_Is_Not_Paid_To_An_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The event/exhibit sponsor is not an individual HCP, private practice group, or unincorporated club or group of HCP&apos;s.</inlineHelpText>
    <label>Exhibit Fee Is Not Paid To An Individual</label>
    <type>Checkbox</type>
</CustomField>