force-app/main/default/objects/Campaign/fields/Exhibit_Space_Is_Offered_To_All_Vendors__c.field-meta.xml
<CustomField>
    <fullName>Exhibit_Space_Is_Offered_To_All_Vendors__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Event/exhibit should be open to all vendors. Vendors can be assigned to certain months in multi-month meeting series</inlineHelpText>
    <label>Exhibit Space Is Offered To All Vendors</label>
    <type>Checkbox</type>
</CustomField>