force-app/main/default/objects/Campaign/fields/Formal_exhibitor_Letter_of_Invite__c.field-meta.xml
<CustomField>
    <fullName>Formal_exhibitor_Letter_of_Invite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Formal exhibitor Letter of Invite</label>
    <type>Checkbox</type>
</CustomField>