force-app/main/default/objects/Campaign/fields/Fulfills_Business_Need_And_Budget__c.field-meta.xml
<CustomField>
    <fullName>Fulfills_Business_Need_And_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Exhibit Space opportunity fulfills a legitimate Business Need and budget is available.</inlineHelpText>
    <label>Fulfills Business Need And Budget</label>
    <type>Checkbox</type>
</CustomField>