force-app/main/default/objects/Campaign/fields/Hotel_City__c.field-meta.xml
<CustomField>
    <fullName>Hotel_City__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>