force-app/main/default/objects/Campaign/fields/Hotel_Country__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Country__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>