force-app/main/default/objects/Campaign/fields/Hotel_Email__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Email</label>
    <type>Email</type>
</CustomField>