force-app/main/default/objects/Campaign/fields/Hotel_Fax__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Fax__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Fax</label>
    <type>Phone</type>
</CustomField>