force-app/main/default/objects/Campaign/fields/Hotel_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>