force-app/main/default/objects/Campaign/fields/Hotel_Phone__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Phone</label>
    <type>Phone</type>
</CustomField>