force-app/main/default/objects/Campaign/fields/Hotel_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Postal_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>