force-app/main/default/objects/Campaign/fields/Hotel_RoomBookingsFrom__c.field-meta.xml
<CustomField>
    <fullName>Hotel_RoomBookingsFrom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zimmerbuchungen möglich ab</label>
    <type>Date</type>
</CustomField>