force-app/main/default/objects/Campaign/fields/Hotel_RoomBookingsTill__c.field-meta.xml
<CustomField>
    <fullName>Hotel_RoomBookingsTill__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zimmerbuchungen möglich bis</label>
    <type>Date</type>
</CustomField>