force-app/main/default/objects/Campaign/fields/Hotel_Street__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Street</label>
    <type>TextArea</type>
</CustomField>