force-app/main/default/objects/Campaign/fields/Hotel_Website__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Website__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Hotel Website</label>
    <type>Url</type>
</CustomField>