force-app/main/default/objects/Campaign/fields/Land__c.field-meta.xml
<CustomField>
    <fullName>Land__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Land</label>
    <length>30</length>
    <type>Text</type>
</CustomField>