force-app/main/default/objects/Campaign/fields/List_of_Product__c.field-meta.xml
<CustomField>
    <fullName>List_of_Product__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Open Payments Program (Formerly Sunshine Act): Please list 1-4 product(s) related to the event you are submitting this request for.</inlineHelpText>
    <label>List 1 to 4 ZB Products</label>
    <type>TextArea</type>
</CustomField>