force-app/main/default/objects/Campaign/fields/List_ZB_Reps_Attending_Event__c.field-meta.xml
<CustomField>
    <fullName>List_ZB_Reps_Attending_Event__c</fullName>
    <description>List_ZB_Reps_Attending_Event</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If no additional reps attending, please put N/A</inlineHelpText>
    <label>List ZB Reps Attending Event</label>
    <type>TextArea</type>
</CustomField>