force-app/main/default/objects/Campaign/fields/Managers_Manager__c.field-meta.xml
<CustomField>
    <fullName>Managers_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns5</relationshipName>
    <type>Lookup</type>
</CustomField>