force-app/main/default/objects/Campaign/fields/No_Show_Count__c.field-meta.xml
<CustomField>
    <fullName>No_Show_Count__c</fullName>
    <label>No Show Count</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>NoShow, No show, No-Show, No Shows</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>