force-app/main/default/objects/Campaign/fields/Notify_group_when_Campaign_is_active__c.field-meta.xml
<CustomField>
    <fullName>Notify_group_when_Campaign_is_active__c</fullName>
    <label>Notify group when Campaign is active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Center</fullName>
                <default>true</default>
                <label>Call Center</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>