force-app/main/default/objects/Campaign/fields/Number_of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Attendees__c</fullName>
    <label>Number of Attendees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>