force-app/main/default/objects/Campaign/fields/Number_of_Meetings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Meetings__c</fullName>
    <label>Number of Meetings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>