force-app/main/default/objects/Campaign/fields/Ort__c.field-meta.xml
<CustomField>
    <fullName>Ort__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ort</label>
    <length>30</length>
    <type>Text</type>
</CustomField>