force-app/main/default/objects/Campaign/fields/Participation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Participation_Fee__c</fullName>
    <label>Participation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>