force-app/main/default/objects/Campaign/fields/Period_exhibit_fee_paid__c.field-meta.xml
<CustomField>
    <fullName>Period_exhibit_fee_paid__c</fullName>
    <label>Period exhibit fee paid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One</fullName>
            </value>
            <value>
                <fullName>Two</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Four</fullName>
            </value>
            <value>
                <fullName>Five</fullName>
            </value>
            <value>
                <fullName>Six</fullName>
            </value>
            <value>
                <fullName>Seven</fullName>
            </value>
            <value>
                <fullName>Eight</fullName>
            </value>
            <value>
                <fullName>Nine</fullName>
            </value>
            <value>
                <fullName>Ten</fullName>
            </value>
            <value>
                <fullName>Eleven</fullName>
            </value>
            <value>
                <fullName>Twelve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>