force-app/main/default/objects/Campaign/fields/purecloud__Adjusted_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Adjusted_End_Date_Time__c</fullName>
    <description>An end date and time of a campaign in user&apos;s local timezone adjusted based on the end date in the selected timezone.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjusted End Date Time</label>
    <type>DateTime</type>
</CustomField>