force-app/main/default/objects/Campaign/fields/purecloud__Adjusted_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Adjusted_Start_Date_Time__c</fullName>
    <description>A start date and time of a campaign in user&apos;s local timezone adjusted based on the start date in the selected timezone.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Adjusted Start Date Time</label>
    <type>DateTime</type>
</CustomField>