force-app/main/default/objects/Campaign/fields/purecloud__Failed_Attempts_to_Reconcile_Results__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Failed_Attempts_to_Reconcile_Results__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Failed Attempts to Reconcile Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>