force-app/main/default/objects/Campaign/fields/purecloud__PureCloud_Campaign_Priority__c.field-meta.xml
<CustomField>
    <fullName>purecloud__PureCloud_Campaign_Priority__c</fullName>
    <label>Genesys Cloud Campaign Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <default>true</default>
                <label>5</label>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>