force-app/main/default/objects/Campaign/fields/purecloud__PureCloud_Campaign_Schedule__c.field-meta.xml
<CustomField>
    <fullName>purecloud__PureCloud_Campaign_Schedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Genesys Cloud Campaign Schedule</label>
    <referenceTo>purecloud__PureCloud_Campaign_Schedule__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>