force-app/main/default/objects/Campaign/fields/purecloud__Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>purecloud__Time_Zones</valueSetName>
    </valueSet>
</CustomField>