force-app/main/default/objects/Campaign/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Appalachian</fullName>
            </value>
            <value>
                <fullName>Buckeye</fullName>
            </value>
            <value>
                <fullName>Capitol</fullName>
            </value>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>Central Canada</fullName>
            </value>
            <value>
                <fullName>Chesapeake Bay</fullName>
            </value>
            <value>
                <fullName>Chicago Land</fullName>
            </value>
            <value>
                <fullName>Corporate Sales</fullName>
            </value>
            <value>
                <fullName>Corporate Sales &amp; Digital</fullName>
                <isActive>false</isActive>
                <label>Corporate Sales &amp; Digital</label>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>East-Canada</fullName>
            </value>
            <value>
                <fullName>Garden State</fullName>
            </value>
            <value>
                <fullName>Golden Gate</fullName>
            </value>
            <value>
                <fullName>Great Lakes</fullName>
            </value>
            <value>
                <fullName>Islands</fullName>
            </value>
            <value>
                <fullName>Key Stone</fullName>
            </value>
            <value>
                <fullName>Lone Star</fullName>
            </value>
            <value>
                <fullName>Metro New York</fullName>
            </value>
            <value>
                <fullName>Mississippi Delta</fullName>
            </value>
            <value>
                <fullName>Mountain</fullName>
            </value>
            <value>
                <fullName>North New England</fullName>
            </value>
            <value>
                <fullName>North Star</fullName>
            </value>
            <value>
                <fullName>Pacific Northwest</fullName>
            </value>
            <value>
                <fullName>Southern</fullName>
            </value>
            <value>
                <fullName>South Florida</fullName>
            </value>
            <value>
                <fullName>South New England</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>