force-app/main/default/objects/Campaign/fields/Requester_Email_Address_Exhibit__c.field-meta.xml
<CustomField>
    <fullName>Requester_Email_Address_Exhibit__c</fullName>
    <formula>Requester_Name__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requester Email Address</label>
    <type>Text</type>
</CustomField>