force-app/main/default/objects/Campaign/fields/Requester_Manager__c.field-meta.xml
<CustomField>
    <fullName>Requester_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns4</relationshipName>
    <type>Lookup</type>
</CustomField>