force-app/main/default/objects/Campaign/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>